# QGIS-Meshing

./: .gitignore  .travis.yml  AUTHORS  Blueprint.md  Makefile  README  README.md  TODO.md  index.html  params.json
debian/: changelog  control  copyright  dirs  rules
debian/.svn/: entries
dev/: export_geo.py
dev/StandAloneScripts/: DOMAINGEN  PosFileConverter.py  export_geo.py  generate_field_xyz_data.py
dev/extras/shore/: configure.in
dev/extras/shore/include/: TVincenty.h  config.h.in  gshhs.h
dev/manual/: dbi.odt
dev/old/: Makefile  gmsh.py
dev/plugins/: bzr_log.3QbVsdeso
dev/seminar/: seminar.odp
dev/tests/: annulus_bn.py  annulus_by.py  annulus_ly.py  bn.py  by.py  fluidity.err-0  gaussian_bump.py  ly.py  parser_class.py  test_BSplines_1.py  test_BSplines_Compound_lines_1.py  test_Compound_lines_1.py  test_Compound_lines_2.py  test_Compound_lines_3.py  test_ShapeData.py  test_annulus_BN.geo  test_annulus_BN.msh  test_annulus_BSplines.py  test_annulus_BSplines_Compound_lines.py  test_annulus_BSplines_Compound_lines_medium_metric.py  test_annulus_BSplines_Compound_lines_metric.py  test_annulus_BY_coarse_metric.geo  test_annulus_BY_medium_metric.geo  test_annulus_BY_metric.geo  test_annulus_Compound_lines.py  test_annulus_Compound_lines_medium_metric.py  test_annulus_Compound_lines_metric.py  test_annulus_LY.msh  test_annulus_LY_coarse_metric.geo  test_annulus_LY_medium_metric.geo  test_annulus_LY_metric.geo  test_geo.py  test_ids_LN.py  test_ids_LY.py  test_msh.py  test_multiReg_1.py  test_uk_main.py  test_uk_main_Noid.py  test_uk_main_cons10d.py  test_uk_main_cons1d.py  (+9 more)
extras/Meshing/: Meshing.py  Ui_Meshing.py  __init__.py  changeMeshToShp.py  debugr.pos  resources.qrc
extras/coarsity_definer/: Makefile  Ui_CoarsityDefiner.ui  __init__.py
extras/contouring/: bathymetry_metric.py  cartographic_projections.py  gmsh.py  rtopo_mask_to_stereographic.py
extras/different_domains/: domain_id.py  input_from_shapefile.py  input_output_for_id.py  new_layer.shp  shapefile_data.txt  uk_domain_idBoundary.geo
extras/grdmath_python/: mathmodule.py
extras/raster_tools/: FileOperations  fileOperations.py
extras/shape/: GSHHS_c_L3.shp  GSHHS_c_L3.shx  GSHHS_c_L4.dbf  Makefile  UK.shp  box.msh  convertToShpFile.py  debugp.pos  debugr.pos  domain-dissolved.shx  domain.dbf  domain.shp  domain.shx  fields.shx  intersectingShapes.py  large-area.dbf  large-area.msh  makeGeoFile.py  mesh.dbf  mesh.shx  new.msh  p.shx  points.txt  se3.shp  se3.shx  sel.dbf  shp.msh  shptest.dbf  shptest.msh  shptest.shp  shptest.shx  test.shp
extras/shore/: Makefile.in
manual/: Makefile  bibliography.bib  meshing_manual.tex
manual/meshing_images/: Makefile
manual/the_meshing_plugins/: the_meshing_plugins.tex
plugins/boundary_identification/: Makefile  boundary_identification.py  define_boundary_id.py  define_id.py  export_plane.py  metadata.txt  resources.py  resources.qrc  ui_boundary_identification.ui
plugins/mesh_surface/: Makefile  __init__.py  generator.py  mesh_surface  mesh_surface_dialog.py  metadata.txt  modular_meshing.py  plugin_upload.py  testengine.py  tests  ui_mesh_surface.py  ui_mesh_surface.ui
plugins/meshing_raster_calc/: metadata.txt  rastercalc.py  rastercalcengine.py  resources_rc.py  ui_rastercalcdialogbase.py
plugins/rasterise_polygons/: __init__.py  resources_rc.py  ui_rasterisepolygons.ui
release/Polygonizer/: PolygonizerDialog.py  __init__.py  frmAbout.py  polygonizer.py  resources.py  resources.qrc  ui_polygonizer.py
release/QuickMultiAttributeEdit/: __init__.py  metadata.txt  quickmultiattributeedit_dialogs.py  quickmultiattributeedit_library.py  quickmultiattributeedit_menu.py
release/mesh_netcdf/: ErrorMessages.py  Makefile  MeshOperations.py  PreMeshingFunctions.py  StandardModules.py  UserInterfaceSetup.py  __init__.py  debugp.pos  define_boundary_id.py  define_id_temp.py  export_geo.py  export_plane.py  export_plane_backup2.py  flat_mesh_to_spherical.py  input_output_for_id.py  meshnetcdf.py  meshnetcdfdialog.py  pr2sph.py  resources.py  resources_rc.py  shapefile.py  ui_meshnetcdf.py  ui_meshnetcdf.ui
release/rastercalc/: DocStrings.py  MathOperations.py  StringParsing.py  (+7 more)
scripts/: PosFileConverter.py  generate_field_xyz_data.py
stylesheets/: styles.css
tests/: test_Compound_lines_0.py  test_Compound_lines_1.py  test_Compound_lines_2.py  test_Compound_lines_3.py  test_UK_mesh_Noid.py  test_UK_mesh_id.py  test_annulus_Compound_lines.py  test_annulus_Compound_lines_coarse_metric.py  test_annulus_Compound_lines_medium_metric.py  test_annulus_Compound_lines_metric.py  test_ids_LN.py  test_ids_LY.py  test_northsea.py  test_northsea_noid.py  test_northsea_trimmed.py  test_uk_main.py  test_uk_main_Noid.py  test_uk_main_cons10d.py  test_uk_main_cons1d.py  test_uk_main_cons5d.py  test_uk_main_eval.py  test_uk_main_id.py  test_uk_main_initial.py
(+560 files in other folders)
